[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mini_lsm"
path = "src/lib.rs"

[dependencies]
serde = "1.0.193"
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "lsm_benchmark"
harness = false