[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mini_lsm"
path = "src/lib.rs"

[dependencies]
serde = "1.0.193"
rand = "0.8.5"
criterion = "0.5.1"
crc32c = "0.6"
thiserror = "1.0.56"
memoffset = "0.9.0"
num-traits = "0.2"
num-derive = "0.4"
tinyvec = { version = "1.6.0", features = ["alloc"]}


[[bench]]
name = "lsm_benchmark"
harness = false